# dashboard

./: .gitignore  README.md  docker-compose.yml  example.db  pyproject.toml  result.txt  ss.json
agents/: main.py  provider.py  registry.py  tools.py
agents/internal/: search_engine.py
agents_v2/memory/: history.py
agents_v2/orchestrator/: serial.py
agents_v2/providers/: base.py  constants.py  openai.py  response.py
agents_v2/tools/: manager.py  registry.py  spec.py
agents_v2/types/: __init__.py  response.py
agents_v2/utils/: constants.py  history.py  serde.py
backend/: _types.py  config.py  constants.py  deps.py  main.py
backend/apis/: __init__.py  agents.py  completion.py  completion_v2.py  conversations.py  file.py  recommend.py  recommendations.py  tools.py  user.py
backend/db/: __init__.py  agent_tables.py  conversations_tables.py  department_tables.py  engine.py  file_tables.py  rag_tables.py  recommendation_tables.py  tools.py  tools_tables.py  user_tables.py  vector_tables.py
backend/models/: __init__.py  agent.py  api.py  completion.py  conversations.py  files.py  history.py  llm.py  message.py  recommendations.py  tools.py  user.py
backend/rag/: __init__.py  analyzer.py  format.py  main.py  models.py  parser.py  splitter.py  test.py  upload.py  vectorstore.py
backend/services/: a.py  agents.py  completion.py  conversations.py  file.py  recommendations.py  tools.py  user.py
data_batch/: mig.py
frontend/: openapi-ts.config.ts  package-lock.json  package.json
goagents/: go.mod  go.sum
tests/: test_recommendation.py
(+56 files in other folders)
