[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.58.2",
    "elasticsearch[async]>=9.1.0",
    "fastapi[standard]>=0.116.1",
    "langchain-postgres>=0.0.15",
    "loguru>=0.7.3",
    "openai>=1.99.0",
    "pandas>=2.3.1",
    "psycopg2>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]
